# LBChronoRace

./: .gitignore  CMakeLists.txt  LBChronoRace.pro  LBChronoRaceFonts.qrc  LBChronoRace_en.qm  LBChronoRace_en.ts  LBChronoRace_it.qm  LBChronoRace_it.ts  README.it.md  README.md  categoriesmodel.cpp  categoriesmodel.h  categoriesmodel.hpp  category.cpp  category.h  category.hpp  catsexdelegate.cpp  catsexdelegate.hpp  cattypedelegate.cpp  cattypedelegate.hpp  chronorace.ui  chronoracedata.cpp  chronoracedata.h  chronoracedata.hpp  chronoracedata.ui  chronoracelogo.cpp  chronoracelogo.h  chronoracelogo.hpp  chronoracetable.cpp  chronoracetable.h  chronoracetable.hpp  chronoracetable.ui  chronoracetimings.cpp  chronoracetimings.h  chronoracetimings.hpp  chronoracetimings.ui  classentry.cpp  classentry.h  classentry.hpp  clubdelegate.cpp  (+118 more)
.circleci/: config.yml
.github/: FUNDING.yml
bundle/: CMakeLists.txt
icons/: LBChronoRace.rc
installer/: CMakeLists.txt  launcher.cpp  launcher.hpp  launcher.rc.in
installer/config/: config.xml  config.xml.in  uninstall.qs
installer/tools/: setappusermodelid.cpp  setappusermodelid.qrc
licenses/: gpl-3.0_it.txt
samples/: README
samples/individual_latin1/: categories.csv  startlist.csv  timings.csv
samples/individual_utf8/: categories.csv  startlist.csv  timings.csv
samples/mass_start/: mass_start.crd
samples/mass_start/latin1/: categories.csv  startlist.csv
samples/mass_start/utf8/: categories.csv  rankings.csv  startlist.csv  timings.csv
samples/relay/: relay.crd
samples/relay/latin1/: categories.csv  rankings.csv  startlist.csv  timings.csv
samples/relay_latin1/: categories.csv  startlist.csv  timings.csv
sonar/: sonar-project.properties
translations/: CMakeLists.txt  LBChronoRace_en.ts  LBChronoRace_it.ts  lbchronorace_en.ts  lbchronorace_it.ts  lbrankings_en.ts  lbrankings_it.ts
wizards/: newracewizard.cpp  newracewizard.hpp  rankingswizard.cpp  rankingswizard.hpp  rankingswizardformat.cpp  rankingswizardformat.hpp  rankingswizardmode.cpp  rankingswizardmode.hpp  rankingswizardselection.cpp  rankingswizardselection.hpp
